--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <span class="headline__purple">мне</span>
             </div>
         </h2>
-        <img src="./pictures/devices.svg" class="about-me__image ">
+        <img src="./icons/devices.svg" class="about-me__image ">
         <p class="paragraph about-me__paragraph">
             Я веб-разработчик уровня junior.
             Практического опыта немного,
@@ -384,9 +384,9 @@
             со мной через соцсети и месседжеры.
         </p>
         <section class="contact__social">
-            <a href="https://t.me/LoremIpsum53" target="blank"><img src="./icons/social/telegram.svg"></a>
-            <a href="https://vk.com/lrmpsm" target="blank"><img src="./icons/social/vk.svg"></a>
-            <a href="https://www.instagram.com/lrmpsm53/" target="blank"><img src="./icons/social/instagram.svg"></a>
+            <a href="https://t.me/LoremIpsum53" target="blank"><img src="./icons/telegram.svg"></a>
+            <a href="https://vk.com/lrmpsm" target="blank"><img src="./icons/vk.svg"></a>
+            <a href="https://www.instagram.com/lrmpsm53/" target="blank"><img src="./icons/instagram.svg"></a>
         </section>
     </article>
     <footer class="footer">
