переработано мобильное меню

--- a/dev/index.html
+++ b/dev/index.html
@@ -54,10 +54,7 @@
         ">
             <span class="headline__gray">Free <span class="headline__purple">лансер</span>.</span>
         </h1>
-        <label class="nav__mobile-menu" for="menu">
-            <img src="./icons/menu.svg" alt="">
-        </label>
-        <input class="nav__toggle" id="menu" type="checkbox">
+            <button class="nav__mobile-menu button"></button>
         <ul class="nav__links">
             <li class="nav__link"><a href="#home">HOME</a></li>
             <li class="nav__link"><a href="#about-me">Обо мне</a></li>
