поправлена работа формы

--- a/dev/index.html
+++ b/dev/index.html
@@ -371,9 +371,8 @@
                 accept-charset="utf-8"
                 target="blank"
                 action="mailto:orlov.dmitriy2303@outlook.com">
-            <input type="text" name="name" placeholder="Ваше имя" class="form__data">
             <input type="text" name="subject" placeholder="Тема вашего письма" class="form__data">
-            <textarea name="text" placeholder="Ваше сообщение" class="form__data form__text"></textarea>
+            <textarea name="body" placeholder="Ваше сообщение" class="form__data form__text"></textarea>
             <button class="button button_size_big">Отправить письмо</button>
         </form>
         <p class="paragraph contact__paragraph">
