проведена нароба над мобильной версией и налажена нормальная работа формы

--- a/index.html
+++ b/index.html
@@ -54,10 +54,7 @@
         ">
             <span class="headline__gray">Free <span class="headline__purple">лансер</span>.</span>
         </h1>
-        <label class="nav__mobile-menu" for="menu">
-            <img src="./icons/menu.svg" alt="">
-        </label>
-        <input class="nav__toggle" id="menu" type="checkbox">
+            <button class="nav__mobile-menu button"></button>
         <ul class="nav__links">
             <li class="nav__link"><a href="#home">HOME</a></li>
             <li class="nav__link"><a href="#about-me">Обо мне</a></li>
@@ -374,9 +371,8 @@
                 accept-charset="utf-8"
                 target="blank"
                 action="mailto:orlov.dmitriy2303@outlook.com">
-            <input type="text" name="name" placeholder="Ваше имя" class="form__data">
             <input type="text" name="subject" placeholder="Тема вашего письма" class="form__data">
-            <textarea name="text" placeholder="Ваше сообщение" class="form__data form__text"></textarea>
+            <textarea name="body" placeholder="Ваше сообщение" class="form__data form__text"></textarea>
             <button class="button button_size_big">Отправить письмо</button>
         </form>
         <p class="paragraph contact__paragraph">
