--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class=" headline headline_font-size_90 headline_align_center header__headline">
             <span class="headline__white">Free <span class="headline__purple">лансер</span>.</span>
         </h1>
-        <h2 class="column_8 headline headline_font-size_4 header__sub-headline">
+        <h2 class="column_8 responsive headline headline_font-size_4 header__sub-headline">
             <span class="center headline__white headline_align_center">Привет. Есть идея?</span>
             <p class="headline__paragraph headline_align_center headline__white">Я фронт-энд web-разработчик и  тот, кто их сможет выполнить</p>
         </h2>
@@ -39,11 +39,11 @@
     </header>
     <nav class="root nav">
         <section class="column_12">
-            <h1 class="column_6 headline headline_font-size_30">
+            <h1 class="column_5 headline headline_font-size_30">
                 <span class="headline__gray">Free <span class="headline__purple">лансер</span>.</span>
             </h1>
             <button class="nav__mobile-menu button"></button>
-            <div class="column_6 nav__links">
+            <div class="column_7 nav__links">
                 <span class="nav__link"><a href="#home">HOME</a></span>
                 <span class="nav__link"><a href="#about-me">Обо мне</a></span>
                 <span class="nav__link"><a href="#portfolio">Портфолио</a></span>
@@ -104,15 +104,11 @@
             <img src="./icons/devices.svg" class="column_7">
             <section class="column_5 responsive">
                 <p class="paragraph about-me__paragraph">
-                    Я веб-разработчик уровня junior.
-                    Практического опыта немного,
-                    но это мне не помешало сверстать этот сайт.
-                    Дальше будет больше, возможно благодаря вам.
-                </p>
-                <p class="paragraph about-me__paragraph">
-                    В данный момент я учусь на программиста и
-                    параллельно постигаю web-разрботку. Я не стою
-                    на месте и постоянно пытаюсь чему-то научиться
+                    Веб-разработчик уровня junior.
+                    Ответственный перфектционист.
+                    Не стою на месте и каждый день 
+                    пытаюсь научитьсячему-то новому. 
+                    А также просто хороший человек.
                 </p>
                 <button class="button button_size_big about-me__button">
                     Узнать больше
@@ -158,7 +154,7 @@
                 <span class="headline__purple">портфолио</span>
             </div>
         </h2>
-        <nav class="column_9 nowrap">
+        <nav class="column_7 responsive nowrap nocolumn">
             <button class="button button_size_small my-portfolio__nav-button button_cheked all">ALL</button>
             <button class="button button_size_small my-portfolio__nav-button button_focused sites">SITES</button>
             <button class="button button_size_small my-portfolio__nav-button button_focused apps">APPs</button>
@@ -238,15 +234,19 @@
                 <button class="button button_size_big">Отправить письмо</button>
             </form>
             <section class="column_6 responsive">
-                <p class="column_12 paragraph contact__paragraph">    
-                    Вы можете использовать электронную почту через эту форму, если у Вас установлен почтовый клиент. Или можете свяязаться
-                    со мной через соцсети и месседжеры.
-                </p>
-                <section class="column_4 contact__social">
-                    <a href="https://t.me/LoremIpsum53" target="blank"><img src="./icons/telegram.svg"></a>
-                    <a href="https://vk.com/lrmpsm" target="blank"><img src="./icons/vk.svg"></a>
-                    <a href="https://www.instagram.com/lrmpsm53/" target="blank"><img src="./icons/instagram.svg"></a>
-                </section>
+                <p class="paragraph">Свяжитесь со мной удобным для Вас способом</p>
+                <a class="contact__social" href="https://t.me/LoremIpsum53" target="blank">
+                    <img src="./icons/telegram.svg">
+                    <h4 class="headline headline__gray headline_font-size_24 ">Я в Telegram</h4>
+                </a>
+                <a href="https://vk.com/lrmpsm" class="contact__social" target="blank">
+                    <img src="./icons/vk.svg">
+                    <h4 class="headline headline__gray headline_font-size_24 ">Я в ВК</h4>
+                </a>
+                <a class="contact__social" href="https://www.instagram.com/lrmpsm53/" target="blank">
+                    <img src="./icons/instagram.svg">
+                    <h4 class="headline headline__gray headline_font-size_24 ">Я в Instagram</h4>
+                </a>
             </section>
         </section>
     </article>
