--- a/dev/index.html
+++ b/dev/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Free лансер</title>
-    <link async rel="stylesheet" type="text/css" href="styles.css">
+    <link async rel="stylesheet" type="text/css" href="./styles.css">
     <script src="./script.js" defer></script>
 </head>
 <body>
@@ -16,7 +16,7 @@
         </h1>
         <h2 class="column_8 responsive headline headline_font-size_4 header__sub-headline">
             <span class="center headline__white headline_align_center">Привет. Есть идея?</span>
-            <p class="headline__paragraph headline_align_center headline__white">Я фронт-энд web-разработчик и  тот, кто их сможет выполнить</p>
+            <p class="headline__paragraph headline_align_center headline__white">Если да - Вы на нужном сайте</p>
         </h2>
         <section class="column_5 responsive nocolumn">
             <a class="column_6 notresponsive section-logo section-logo_focused" href="#portfolio">
@@ -160,7 +160,7 @@
             <button class="button button_size_small my-portfolio__nav-button button_focused apps">APPs</button>
         </nav>
         <section class="column_12 responsive my-portfolio__content">
-            <div class="column_4 portfolio-card sites">
+            <div class="column_4 portfolio-card my-portfolio__sites">
                 <img class="portfolio-card__banner" src="./pictures/web.jpg">
                     <h6 class="headline headline__dark-gray headline_align_center headline_font-size_20">
                         Пока здесь ничего нет
@@ -169,7 +169,7 @@
                         Sites
                     </p>
             </div>
-            <div class="column_4 portfolio-card sites">
+            <div class="column_4 portfolio-card my-portfolio__sites">
                 <img class="portfolio-card__banner" src="./pictures/web.jpg">
                     <h6 class="headline headline__dark-gray headline_align_center headline_font-size_20">
                         Пока здесь ничего нет
@@ -178,16 +178,16 @@
                         Sites
                     </p>
             </div>
-            <div class="column_4 portfolio-card apps">
-                <img class="portfolio-card__banner" src="./pictures/apps.jpg">
+            <a href="./portfolio/calculator/index.html" target="blank" class="column_4 portfolio-card my-portfolio__apps">
+                <img class="portfolio-card__banner" src="./pictures/portflio/apps/calculator.png">
                 <h6 class="headline headline__dark-gray headline_align_center headline_font-size_20">
-                    И здесь пока ничего нет
+                    Простой кальколятор на Vue
                 </h6>    
                 <p class="paragraph paragraph_align_center portfolio-card__tag">
                     Apps
                 </p>
-            </div>
-            <div class="column_4 portfolio-card sites">
+            </a>
+            <div class="column_4 portfolio-card my-portfolio__sites">
                 <img class="portfolio-card__banner" src="./pictures/web.jpg">
                 <h6 class="headline headline__dark-gray headline_align_center headline_font-size_20">
                     Пока здесь ничего нет
@@ -196,7 +196,7 @@
                     Sites
                 </p>
             </div>
-            <div class="column_4 portfolio-card apps">
+            <div class="column_4 portfolio-card my-portfolio__apps">
                 <img class="column_4 portfolio-card__banner" src="./pictures/apps.jpg">
                 <h6 class="headline headline__dark-gray headline_align_center headline_font-size_20">
                     И здесь пока ничего нет
@@ -205,7 +205,7 @@
                     Apps
                 </p>
             </div>
-            <div class="column_4 portfolio-card apps">
+            <div class="column_4 portfolio-card my-portfolio__apps">
                 <img class="portfolio-card__banner" src="./pictures/apps.jpg">
                 <h6 class="headline headline__dark-gray headline_align_center headline_font-size_20">
                     И здесь пока ничего нет
@@ -251,14 +251,9 @@
         </section>
     </article>
     <footer class="footer">
-        <h1 class="
-        headline
-        headline_font-size_90
-        headline_align_center
-        footer__headline
-">
-<span class="headline__gray">Free <span class="headline__purple">лансер</span>.</span>
-</h1>
+        <h1 class="headline headline_font-size_90 headline_align_center footer__headline">
+            <span class="headline__gray">Free <span class="headline__purple">лансер</span>.</span>
+        </h1>
     </footer>
 </body>
 </html>
