перелопачена сборка. часть компонентов убрана из неё

--- a/dev/index.html
+++ b/dev/index.html
@@ -4,155 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Free лансер</title>
-    <link async rel="stylesheet" type="text/css" href="./styles.css">
-    <script src="./script.js" defer></script>
+    <title>Портфолио</title>
+    <link rel="stylesheet" type="text/css" href="./scss/index.scss">
 </head>
 <body>
     <a id="home"></a>
     <header class="root header">
         <h1 class=" headline headline_font-size_90 headline_align_center header__headline">
-            <span class="headline__white">Free <span class="headline__purple">лансер</span>.</span>
+            <span class="headline__white">Порт<span class="headline__purple">фолио</span>.</span>
         </h1>
         <h2 class="column_8 responsive headline headline_font-size_4 header__sub-headline">
-            <span class="center headline__white headline_align_center">Привет. Есть идея?</span>
-            <p class="headline__paragraph headline_align_center headline__white">Если да - Вы на нужном сайте</p>
+            <span class="center headline__white headline_align_center">Моё небольшое портфолио</span>
+            <span class="headline__paragraph headline_align_center headline__white">Всё написано в подвале на коленке</span>
         </h2>
-        <section class="column_5 responsive nocolumn">
-            <a class="column_6 notresponsive section-logo section-logo_focused" href="#portfolio">
-                <img class="section-logo__icon" src="./icons/portfolio.svg">
-                <h4 class="section-logo__headline">Портфолио</h4>
-            </a>
-            <a class="column_6 notresponsive section-logo section-logo_focused" href="#about-me">
-                <img class="section-logo__icon" src="./icons/about.svg">
-                <h4 class="section-logo__headline">Обо мне</h4>
-            </a>
-            <a href="#" class="column_6 notresponsive section-logo section-logo_focused">
-                <img class="section-logo__icon" src="./icons/blog.svg">
-                <h4 class="section-logo__headline">Блог</h4>
-            </a>
-            <a class="column_6 notresponsive section-logo section-logo_focused"  href="#contact">
-                <img class="section-logo__icon" src="./icons/contact.svg">
-                <h4 class="section-logo__headline">Контакт</h4>
-            </a>
-        </section>
     </header>
-    <nav class="root nav">
-        <section class="column_12">
-            <h1 class="column_5 headline headline_font-size_30">
-                <span class="headline__gray">Free <span class="headline__purple">лансер</span>.</span>
-            </h1>
-            <button class="nav__mobile-menu button"></button>
-            <div class="column_7 nav__links">
-                <span class="nav__link"><a href="#home">HOME</a></span>
-                <span class="nav__link"><a href="#about-me">Обо мне</a></span>
-                <span class="nav__link"><a href="#portfolio">Портфолио</a></span>
-                <span class="nav__link"><a href="#">Блог</a></span>
-                <span class="nav__link"><a href="#contact">Контакт</a></span>
-            </div>
-        </section>
-    </nav>
-    <article class="root advantages">
-        <section class="column_12 responsive">
-            <section class="column_3 advantages__statement">
-                <div class="section-logo advantages__icon">
-                    <img src="./icons/heart.svg" class="section-logo__icon">
-                </div>
-                <h4 class="headline headline__gray headline_align_center headline_font-size_24">
-                    Сделано с любовью
-                </h4>
-                <p class="center advantages__paragraph paragraph paragraph_align_center">
-                    Каждый выполненный проект &mdash; результат кропотливой работы.
-                    Свою долю внимания получает любая незначительная мелочь
-                </p>
-            </section>
-            <section class="column_3 advantages__statement">
-                <div class="section-logo advantages__icon">
-                    <img src="./icons/diamond.svg" class="section-logo__icon">
-                </div>
-                <h4 class="headline headline__gray headline_font-size_24 headline_align_center">
-                    Чисто исовременно
-                </h4>
-                <p class="center advantages__paragraph paragraph paragraph_align_center">
-                    В разработке используются современные средства и инструменты, 
-                    чтобы достичь максимального качества конечного продукта
-                </p>
-            </section>
-                <section class="column_3 advantages__statement">
-                    <div class="section-logo advantages__icon">
-                        <img src="./icons/phone.svg" class="section-logo__icon">
-                    </div>
-                    <h4 class="headline headline__gray headline_align_center headline_font-size_24">
-                        Полная адаптивность
-                </h4>
-                <p class="advantages__paragraph paragraph paragraph_align_center">
-                    Не беспокойтесь об этом.
-                    Ваш design будет хорошо выглядеть на экране любого формата
-                </p>
-            </section>
-        </section>
-    </article>
-    <a id="about-me"></a>
-    <article class="root about-me">
-        <h2 class="headline headline_font-size_48 headline_align_center about-me__headline">
-            <div class="headline__angles">
-            <span class="headline__gray">Обо</span>
-            <span class="headline__purple">мне</span>
-            </div>
-        </h2>
-        <section class="column_12 responsive">
-            <img src="./pictures/devices.svg" class="column_7">
-            <section class="column_5 responsive">
-                <p class="paragraph about-me__paragraph">
-                    Веб-разработчик уровня junior.
-                    Ответственный перфектционист.
-                    Не стою на месте и каждый день 
-                    пытаюсь научитьсячему-то новому. 
-                    А также просто хороший человек.
-                </p>
-                <button class="button button_size_big about-me__button">
-                    Узнать больше
-                </button>
-            </section>
-        </section>
-    </article>
-    <article class="root my-skills">
-        <h2 class="headline headline_font-size_48 headline_align_center my-skills__headline">
-            <div class="headline__angles">
-                <span class="headline__gray">Мои</span>
-                <span class="headline__purple">навыки</span>
-            </div>
-        </h2>
-        <section class="column_12 responsive">
-            <div class="column_5 my-skills__value">
-                <h3 class="headline headline_font-size_24 my-skills__skill-name">HTML/CSS(SCSS)</h3>
-                <div class="my-skills__progress-bar my-skills__progress-bar_html-css"></div>
-            </div>
-            <div class="column_5 my-skills__value">
-                <h3 class="headline headline_font-size_24 my-skills__skill-name">Vue</h3>
-                <div class="my-skills__progress-bar my-skills__progress-bar_vue"></div>
-            </div>
-            <div class="column_5 my-skills__value">
-                <h3 class="headline headline_font-size_24 my-skills__skill-name">Git</h3>
-                <div class="my-skills__progress-bar my-skills__progress-bar_git"></div>
-            </div>
-            <div class="column_5 my-skills__value">
-                <h3 class="headline headline_font-size_24 my-skills__skill-name">JS</h3>
-                <div class="my-skills__progress-bar my-skills__progress-bar_js"></div>
-            </div>
-            <div class="column_5 my-skills__value">
-                <h3 class="headline headline_font-size_24 my-skills__skill-name">Webpack</h3>
-                <div class="my-skills__progress-bar my-skills__progress-bar_webpack"></div>
-            </div>
-        </section>
-    </article>
     <a id="portfolio"></a>
     <article class="root my-portfolio">
         <h2 class="headline headline_font-size_48 headline_align_center my-portflio__headline">
-            <div class="headline__angles">
+            <span class="headline__angles">
                 <span class="headline__gray">Моё</span>
                 <span class="headline__purple">портфолио</span>
-            </div>
+            </span>
         </h2>
         <nav class="column_7 responsive nowrap nocolumn">
             <button class="button button_size_small my-portfolio__nav-button button_cheked all">ALL</button>
@@ -160,17 +32,17 @@
             <button class="button button_size_small my-portfolio__nav-button button_focused apps">APPs</button>
         </nav>
         <section class="column_12 responsive my-portfolio__content">
-            <div class="column_4 portfolio-card my-portfolio__sites">
-                <img class="portfolio-card__banner" src="./pictures/web.jpg">
+            <a href="https://dmitriyorlov53.github.io/landing1/" target="_blank" rel="noopener" class="column_4 portfolio-card my-portfolio__sites">
+                <img class="portfolio-card__banner" src="./pictures//portflio/sites/landing1.png" alt="portflio 1">
                     <h6 class="headline headline__dark-gray headline_align_center headline_font-size_20">
-                        Пока здесь ничего нет
+                        Промосайт с соблюдением семантики и высоким рейтингом в Lighthouse
                     </h6>    
                     <p class="paragraph paragraph_align_center portfolio-card__tag">
                         Sites
                     </p>
-            </div>
+                </a>
             <div class="column_4 portfolio-card my-portfolio__sites">
-                <img class="portfolio-card__banner" src="./pictures/web.jpg">
+                <img class="portfolio-card__banner" src="./pictures/web.jpg" alt="site">
                     <h6 class="headline headline__dark-gray headline_align_center headline_font-size_20">
                         Пока здесь ничего нет
                     </h6>
@@ -178,17 +50,17 @@
                         Sites
                     </p>
             </div>
-            <a href="./portfolio/calculator/index.html" target="blank" class="column_4 portfolio-card my-portfolio__apps">
-                <img class="portfolio-card__banner" src="./pictures/portflio/apps/calculator.png">
+            <a href="https://dmitriyorlov53.github.io/giglevich/" rel="noopener" target="_blank" class="column_4 portfolio-card my-portfolio__apps">
+                <img class="portfolio-card__banner" src="./pictures/portflio/apps/giglevich.png"  alt="app">
                 <h6 class="headline headline__dark-gray headline_align_center headline_font-size_20">
-                    Простой кальколятор на Vue
+                    Интерактивная карта Пскова на Konva и Vue
                 </h6>    
                 <p class="paragraph paragraph_align_center portfolio-card__tag">
                     Apps
                 </p>
             </a>
             <div class="column_4 portfolio-card my-portfolio__sites">
-                <img class="portfolio-card__banner" src="./pictures/web.jpg">
+                <img class="portfolio-card__banner" src="./pictures/web.jpg" alt="site">
                 <h6 class="headline headline__dark-gray headline_align_center headline_font-size_20">
                     Пока здесь ничего нет
                 </h6>    
@@ -196,17 +68,20 @@
                     Sites
                 </p>
             </div>
-            <div class="column_4 portfolio-card my-portfolio__apps">
-                <img class="column_4 portfolio-card__banner" src="./pictures/apps.jpg">
+            <a
+                href="https://github.com/DmitriyOrlov53/simple_audio_web_player"
+                rel="noopener" target="_blank" class="column_4 portfolio-card my-portfolio__apps"
+            >
+                <img class="portfolio-card__banner" src="./pictures/portflio/apps/player.png"  alt="app">
                 <h6 class="headline headline__dark-gray headline_align_center headline_font-size_20">
-                    И здесь пока ничего нет
+                    Простой встраиваемый, адаптивный виджет аудиоплеера. Написан на Typescript и Sass
                 </h6>    
-                <p class="paragraph paragraph_align_center portfolio-card__tag ">
+                <p class="paragraph paragraph_align_center portfolio-card__tag">
                     Apps
                 </p>
-            </div>
+            </a>
             <div class="column_4 portfolio-card my-portfolio__apps">
-                <img class="portfolio-card__banner" src="./pictures/apps.jpg">
+                <img class="portfolio-card__banner" src="./pictures/apps.jpg" alt="app">
                 <h6 class="headline headline__dark-gray headline_align_center headline_font-size_20">
                     И здесь пока ничего нет
                 </h6>    
@@ -215,19 +90,16 @@
                 </p>
             </div>
         </section>
-        <button class="my-portfolio__watch-button button button_size_big">
-            Смотреть больше
-        </button>
     </article>
     <a id="contact"></a>
     <article class="root contact">
         <h2 class="headline headline_font-size_48 headline_align_center contact__headline">
-            <div class="headline__angles">
+            <span class="headline__angles">
                 <span class="headline__gray">Связаться</span>
                 <span class="headline__purple">со мной</span>
-            </div>
+            </span>
         </h2>
-        <section class="column_12">
+        <div class="column_12">
             <form class="column_6 responsive" method="POST" enctype="text/plain" accept-charset="utf-8" target="blank" action="mailto:orlov.dmitriy2303@outlook.com">
                 <input type="text" name="subject" placeholder="Тема вашего письма" class="input contact__input">
                 <textarea name="body" placeholder="Ваше сообщение" class="input input_text contact__input"></textarea>
@@ -235,24 +107,24 @@
             </form>
             <section class="column_6 responsive">
                 <p class="paragraph">Свяжитесь со мной удобным для Вас способом</p>
-                <a class="contact__social" href="https://t.me/LoremIpsum53" target="blank">
-                    <img src="./icons/social/telegram.svg">
+                <a class="contact__social" href="https://t.me/LoremIpsum53" target="_blank">
+                    <img src="./icons/social/telegram.svg" alt="telegram icon">
                     <h4 class="headline headline__gray headline_font-size_24 ">Я в Telegram</h4>
                 </a>
-                <a href="https://vk.com/lrmpsm" class="contact__social" target="blank">
-                    <img src="./icons/social/vk.svg">
+                <a href="https://vk.com/lrmpsm" class="contact__social" target="_blank">
+                    <img src="./icons/social/vk.svg" alt="vk icon">
                     <h4 class="headline headline__gray headline_font-size_24 ">Я в ВК</h4>
                 </a>
-                <a class="contact__social" href="https://www.instagram.com/lrmpsm53/" target="blank">
-                    <img src="./icons/social/instagram.svg">
+                <a class="contact__social" href="https://www.instagram.com/lrmpsm53/" target="_blank">
+                    <img src="./icons/social/instagram.svg" alt="instragram icon">
                     <h4 class="headline headline__gray headline_font-size_24 ">Я в Instagram</h4>
                 </a>
             </section>
-        </section>
+        </div>
     </article>
     <footer class="footer">
         <h1 class="headline headline_font-size_90 headline_align_center footer__headline">
-            <span class="headline__gray">Free <span class="headline__purple">лансер</span>.</span>
+            <span class="headline__gray">Порт<span class="headline__purple">фолио</span>.</span>
         </h1>
     </footer>
 </body>
